resolved overflow on medium and large screen sizes
resolved issue of horizontal overflow on medium and large screen sizes..

--- a/recipes/pages.css
+++ b/recipes/pages.css
@@ -27,6 +27,7 @@ body {
 
 .hero {
     width: 100%;
+    overflow: hidden;
     margin-bottom: 1.5rem;
     position: relative;
 }
@@ -43,7 +44,7 @@ body {
     position: relative;
     z-index: 2;
     top: 11rem;
-    left: 0.5rem;
+    left: 1rem;
 }
 
 .hero__image {
@@ -194,19 +195,24 @@ body {
 /* md */
 @media (min-width: 768px) {
 
+    .hero {
+        overflow-x: hidden;
+    }
+
     .hero__wrapper {
-        padding-bottom: 25vh;
+        padding-bottom: 30vh;
     }
 
     .hero__title{
         font-size: 3rem;
         top:15rem;
-        left: 1rem;
+        left: 2rem;
     }
 
     .hero__image {
         width: 100%;
-        height: 30vh;
+        object-fit: cover;
+        height: 40vh;
     }
 
     .container_description {
@@ -287,13 +293,22 @@ body {
 /* Lg */
 @media (min-width: 1024px) {
 
+    .hero {
+        overflow-x: hidden;
+        overflow-y: visible;
+    }
+
     .hero__wrapper {
-        padding-bottom: 30vh;
+        padding-bottom: 40vh;
     }
 
     .hero__title{
         font-size: 4rem;
         top:18rem;
+    }
+
+    .hero__image {
+        height: 45vh;
     }
 
     .ingredients {
@@ -330,7 +345,7 @@ body {
 @media (min-width: 1280px) {
 
     .hero__wrapper {
-        padding-bottom: 35vh;
+        padding-bottom: 45vh;
     }
 
     .hero__title{
@@ -339,7 +354,7 @@ body {
     }
 
     .hero__image {
-        height: 35vh;
+        height: 50vh;
     }
 
     .container_description {
@@ -405,4 +420,9 @@ body {
 
 /* 2xL */
 @media (min-width: 1536px) {
+
+    .hero__image {
+        height: 55vh;
+    }
+
 }
